認証機能付学習用サンプルアプリ完成

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,20 @@
   "python.analysis.extraPaths": ["src"],
   "python.analysis.autoSearchPaths": true,
   "python.analysis.useLibraryCodeForTypes": true,
-  "makefile.configureOnOpen": false
+  "makefile.configureOnOpen": false,
+  "emmet.includeLanguages": {
+    "django-html": "html"
+  },
+  "files.associations": {
+    "*.html": "django-html"
+  },
+  "editor.quickSuggestions": {
+    "strings": true
+  },
+  "html.validate.styles": false,
+  "html.validate.scripts": false,
+  "[django-html]": {
+    "editor.formatOnSave": false
+  },
+  "cSpell.words": ["elif", "endfor", "onclick", "signup", "stylesheet"]
 }
